<resources>
    <string name="app_name">New Recipe</string>
    <string name="title">Title</string>
    <string name="author">Author : </string>
    <string name="publication_date">Publication Date :</string>
    <string name="_04_05_20">04-05-20</string>
    <string name="desc">desc</string>
    <string name="josi">Josi</string>
    <string name="sctionsname">Section : </string>
    <string name="cooking">Cooking</string>
    <string name="see_the_recipe">See The Recipe</string>
    <string name="noNetwork">No Network Connection</string>
    <string name="klik_to_see_the_recipe">Klik To See The Recipe</string>
</resources>
